@@ -38,6 +38,7 @@ ENH: Ticket#743 - Added status code header in HTTP response when in error (Qiang
 ENH: Ticket#745 - TWizard action MoveTo - allow specify step ID's (Christophe)
 ENH: Ticket#757 - TDateFormat and TNumberFormat now implement IDataRenderer (Qiang)
 ENH: Ticket#783 - Added date/time type support to soap implementation (Hongliang)
+ENH: Ticket#800 - Added database connection charset for MySql (donkee)
 ENH: Active Record supports multiple foreign references of the same table (Wei)
 ENH: Added TDbCommand.queryColumn() (Qiang)
 ENH: Active Record now supports implicitly declared related properties (Qiang)
